bk_ida/gccida/c2/dw2_asm_output_nstring
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_nstring/src/dwarf2asm.c:736:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v8] & 0x10) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_nstring/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_nstring/src/dwarf2asm.c:774:7: error: use of undeclared identifier 'byte_666590'
v16 = byte_666590[v15]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_nstring/src/dwarf2asm.c:780:11: error: use of undeclared identifier 'byte_666590'
else if ( byte_666590[v15] ) 
          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_nstring/src/dwarf2asm.c:804:7: error: use of undeclared identifier 'byte_666590'
v19 = byte_666590[v13]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_nstring/src/dwarf2asm.c:811:6: error: use of undeclared identifier 'byte_666590'
if ( byte_666590[v13] ) 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_nstring/src/obj/dwarf2asm.o] Error 1
